--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
 3/a.out
 .vscode/
 34/problem34
+
+# C# crap
+*_i.c
+*_p.c
+*_i.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.log
+*.svclog
+*.scc
+*.csproj
+*/bin
+*/obj
